resizable-table: Prevent user selection during column size drag
Still broken on DuckDuckGo

--- a/app/view/netcreate/components/URTable.css
+++ b/app/view/netcreate/components/URTable.css
@@ -8,8 +8,12 @@
   padding: 0 5px;
   border-right: 1px solid #ccc;
   position: relative;
-  user-select: none;
   background-color: #0001;
+}
+.URTable thead,
+.URTable thead > tr,
+.URTable thead > tr > th {
+  user-select: none;
 }
 .URTable .resize-handle {
   position: absolute;
